[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/LDtkImporter/LDtkImporterDock.gd" type="Script" id=1]

[node name="LDtk Importer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 10.0
margin_right = -5.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1014.0
margin_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1014.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1014.0
margin_bottom = 14.0
text = "Options"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1014.0
margin_bottom = 22.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 1014.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 100 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 258.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 258.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 49.0
margin_bottom = 19.0
text = "Output:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 258.0
margin_bottom = 24.0

[node name="OutputDirText" type="LineEdit" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
text = "res://"
editable = false

[node name="SelectDir" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 205.0
margin_bottom = 24.0
text = "Select"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -507.0
margin_top = -20.0
margin_right = 507.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Import" type="Button" parent="CenterContainer"]
margin_left = 479.0
margin_right = 535.0
margin_bottom = 20.0
text = "Import"

[node name="LDtkFileImport" type="FileDialog" parent="."]
margin_right = 390.0
margin_bottom = 215.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.ldtk" )

[node name="OutputDir" type="FileDialog" parent="."]
margin_right = 390.0
margin_bottom = 215.0
window_title = "Open a Directory"
mode = 2
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer/SelectDir" to="." method="_on_SelectDir_pressed"]
[connection signal="pressed" from="CenterContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="file_selected" from="LDtkFileImport" to="." method="_on_LDtkFileImport_file_selected"]
[connection signal="dir_selected" from="OutputDir" to="." method="_on_OutputDir_dir_selected"]
